btn color changed to black

--- a/button.css
+++ b/button.css
@@ -1,5 +1,5 @@
 .btn{
-    background-color: yellow;
+    background-color: black;
     border: none;
     padding: 10px 15px;
     text-align: center;
