--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -24,7 +24,7 @@ Enter Name:
     <input type="text" placeholder="Enter"  name="name" ngModel required><br><br>
 <input type="password" placeholder="password" name="password" ngModel required><br><br>
 <button>Submit like and </button>
-
+<button>Submit like and </button>
 
 
 
