--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -23,7 +23,7 @@ Enter Name:
 <form #loginForm="ngForm" (ngSubmit)="getLoginFormData(loginForm.value)">
     <input type="text" placeholder="Enter"  name="name" ngModel required><br><br>
 <input type="password" placeholder="password" name="password" ngModel required><br><br>
-<button>Submit</button>
+<button type="submit">Submit</button>
 
 
 
