button change to primary

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,4 @@
 <app-class1></app-class1>
 <app-class2></app-class2>
 <router-outlet></router-outlet>
-<button>login</button>
+<button type="button" class="btn btn-primary">login</button>
