--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
 <app-class1></app-class1>
 <app-class2></app-class2>
 <router-outlet></router-outlet>
-<button>login</button>
+<h1>book</h1>
+<h2>tt</h2>
