--- a/src/app/class2/class2.component.html
+++ b/src/app/class2/class2.component.html
@@ -4,3 +4,4 @@
 <h1>{{nameTouse}}</h1>
 
 <button type="button" (click)="showAlert()"></button>
+<input type="date" name="" id="" placeholder="Enter a date">
