--- a/src/app/class2/class2.component.html
+++ b/src/app/class2/class2.component.html
@@ -2,6 +2,6 @@
 <!-- {{inputText}} -->
 
 <h1>{{nameTouse}}</h1>
-
+<H1>Hello</H1>
 <button type="button" (click)="showAlert()"></button>
 <input type="date" name="" id="" placeholder="Enter a date">
