form for gender

--- a/src/app/class2/class2.component.html
+++ b/src/app/class2/class2.component.html
@@ -3,5 +3,9 @@
 
 <h1>{{nameTouse}}</h1>
 
-<button type="button" (click)="showAlert()"></button>
-<input type="date" name="" id="" placeholder="Enter a date">
+<form>
+    <p>Enter Your Gender</p>
+    <input type="radio" name="gender" value="Male">Male
+    <input type="radio" name="gender" value="Female">Female
+    <button type="submit" (click)="showAlert()"></button>
+</form>
