--- a/src/app/class2/class2.component.html
+++ b/src/app/class2/class2.component.html
@@ -4,5 +4,6 @@
 <h1>{{nameTouse}}</h1>
 <H1>Hello Everyone</H1>
 <h2>best of luck</h2>
+<h3>what's up</h3>
 <button type="button" (click)="showAlert()"></button>
 <input type="date" name="" id="" placeholder="Enter a date">
