--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -12,9 +12,9 @@ Enter Name:
 
 {{a|currency}}<br>
 
-{{p|percent}}
+{{p|percent}}-->
 
-{{decimal|date:"dd/mm/yy"}} -->
+{{decimal|date:"dd/mm/yy"}} 
 
 
 
