--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -10,9 +10,9 @@ Enter Name:
 {{today|date:"dd/MM/yy/hh:mm:ss"}}<br>
 
 
-{{a|currency}}<br>
+{{a|currency}}<br>-->
 
-{{p|percent}}-->
+{{p|percent}}
 
 {{decimal|date:"dd/mm/yy"}} 
 
