--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -14,7 +14,9 @@ Enter Name:
 
 {{p|percent}}
 
-{{decimal|date:"dd/mm/yy"}} -->
+{{decimal|date:"dd/mm/yy"}} 
+
+<label for="enter text">Enter text</label>
 
 
 
@@ -23,7 +25,7 @@ Enter Name:
     <form #loginForm="ngForm" (ngSubmit)="getLoginFormData(loginForm.value)">
         <input type="text" placeholder="Enter" name="name" ngModel required><br><br>
         <input type="password" placeholder="password" name="password" ngModel required><br><br>
-        <<<<<<< HEAD <button type="submit">Submit</button>
+         HEAD <button type="submit">Submit</button>
 
             =======
             <button>Submit like and </button>
