--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -16,7 +16,8 @@ Enter Name:
 
 {{decimal|date:"dd/mm/yy"}} 
 
-<label for="enter text">Enter text</label>
+<label for="enter text">Enter text</label> <br>
+<input type="text">
 
 
 
