--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -16,8 +16,9 @@ Enter Name:
 
 {{decimal|date:"dd/mm/yy"}} 
 
-<label for="enter text">Enter text</label> <br>
-<input type="text">
+<label for="text">Enter Name</label> <br>
+<input type="text" placeholder="name"> <br>
+<!-- <label for="Enter"></label> -->
 
 
 
