--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -18,7 +18,7 @@ Enter Name:
 
 <label for="text">Enter Name</label> <br>
 <input type="text" placeholder="name"> <br>
-<!-- <label for="Enter"></label> -->
+<label for="text">Enter E-mail</label> <br>
 
 
 
