--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -19,6 +19,7 @@ Enter Name:
 <label for="text">Enter Name</label> <br>
 <input type="text" placeholder="name"> <br>
 <label for="text">Enter E-mail</label> <br>
+<input type="email" placeholder="Enter Email"> <br>
 
 
 
