--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -20,6 +20,7 @@ Enter Name:
 <input type="text" placeholder="name"> <br>
 <label for="text">Enter E-mail</label> <br>
 <input type="email" placeholder="Enter Email"> <br>
+<button>Submit</button>
 
 
 
