--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -13,7 +13,8 @@ Enter Name:
 {{a|currency}}<br>-->
 
 {{p|percent}}
-<p>hello , i have added this</p>
+<p>hello , i have added this
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>  
 
 {{decimal|date:"dd/mm/yy"}} 
 
