--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -23,6 +23,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
 <label for="text">Enter E-mail</label> <br>
 <input type="email" placeholder="Enter Email"> <br>
 <label for="number">Mobile Number</label>
+<input type="number" placeholder="enter number">
 <button>Submit</button>
 
 
