--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -36,7 +36,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
          HEAD <button type="submit">Submit</button>
 
             =======
-            <button>Submit like and </button>
+            <button>Submit </button>
             <button (click)="clickon()">Submit like and </button>
             >>>>>>> a9deabf281e50af4a177754eb35bd86bb1156f86
 
