--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -14,6 +14,10 @@ Enter Name:
 
 {{p|percent}}
 <p>hello , i have added this
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
+<p>hello , i have added this
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
+<p>hello , i have added this
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>  
 
 {{decimal|date:"dd/mm/yy"}} 
@@ -54,9 +58,9 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
     <table>
         <thead>
             <tr>
-                <th>Name</th>
+                <th>Name </th>
                 <th>Surname</th>
-                <th>Age</th>
+                <th>Agegit</th>
                 <th>Gender</th>
             </tr>
         </thead>
