--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -14,7 +14,7 @@ Enter Name:
 
 {{p|percent}}
 
-{{decimal|date:"dd/mm/yy"}} 
+{{decimal|date:"dd/mm/yy"}}
 
 <label for="enter text">Enter text</label> <br>
 <input type="text">
@@ -26,14 +26,11 @@ Enter Name:
     <form #loginForm="ngForm" (ngSubmit)="getLoginFormData(loginForm.value)">
         <input type="text" placeholder="Enter" name="name" ngModel required><br><br>
         <input type="password" placeholder="password" name="password" ngModel required><br><br>
-         HEAD <button type="submit">Submit</button>
 
-            =======
-            <button>Submit like and </button>
-            <button (click)="clickon()">Submit like and </button>
-            >>>>>>> a9deabf281e50af4a177754eb35bd86bb1156f86
+        <button (click)="clickon()">Submit</button>
 
     </form>
+
     <p>{{named}}</p>
 
 </div>
