--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -24,7 +24,9 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
 <input type="email" placeholder="Enter Email"> <br>
 <label for="number">Mobile Number</label>
 <input type="number" placeholder="enter number">
+<label for="address">address</label>
 <button>Submit</button>
+
 
 
 
