--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -19,7 +19,7 @@ Enter Name:
 
 
 <div class="container">
-
+hfueu
 <form #loginForm="ngForm" (ngSubmit)="getLoginFormData(loginForm.value)">
     <input type="text" placeholder="Enter"  name="name" ngModel required><br><br>
 <input type="password" placeholder="password" name="password" ngModel required><br><br>
