--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,5 @@
 <app-class1></app-class1>
 <app-class2></app-class2>
 <router-outlet></router-outlet>
-<<<<<<< HEAD
-=======
 <button type="button" class="btn btn-primary">login</button>
->>>>>>> 940f6e0b5968d82c71cab0152d20df24385dbdae
+<p><head></head></p>
