--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -61,8 +61,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum
             accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
         <p>hello , i have added this
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum
-            accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
+            Lorem ipsum dolor  atque perspiciatis quidem, quas, tenetur vat!</p>
 
         {{decimal|date:"dd/mm/yy"}}
 
