--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -55,7 +55,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
         <input type="password" placeholder="password" name="password" ngModel required><br><br>
 
         <p>hello , i have added this
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum
+           ing elit. Asperiores, magni officiis. Repellendus rerum
             accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
         <p>hello , i have added this
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum
