create a new branch stage1

--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -20,7 +20,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
 git  
 
 {{decimal|date:"dd/mm/yy"}} 
-
+<label for="text">Enter Name</label> <br>
 <label for="text">Enter Name</label> <br>
 <input type="text" placeholder="name"> <br>
 <label for="text">Enter E-mail</label> <br>
