changed pre data

--- a/src/app/class2/class2.component.html
+++ b/src/app/class2/class2.component.html
@@ -18,5 +18,8 @@
 
 <pre>
     "Respeted Sir , 
-    regards to u"
+    ..........................
+    ......................
+    .......................
+             regards ."
 </pre>
