--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -18,6 +18,12 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
 <p>hello , i have added this
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
 git  
+<p>hello , i have added this
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
+    <p>hello , i have added this
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
+    git  
+    
 
 {{decimal|date:"dd/mm/yy"}} 
 <label for="text">Enter Name</label> <br>
