changed pre data

--- a/src/app/class2/class2.component.html
+++ b/src/app/class2/class2.component.html
@@ -9,8 +9,9 @@
     <input type="radio" name="gender" value="Female">Female
     <button type="submit" (click)="showAlert()"></button>
 </form>
+
 <button type="button" (click)="showAlert()"></button>
-<input type="date" name="" id="" placeholder="Enter a date">
+<input type="date" name="date" id="date" placeholder="Enter a date">
 <h2>shankar - adding last commits in github</h2>
 
 <pre>
