--- a/src/app/class2/class2.component.html
+++ b/src/app/class2/class2.component.html
@@ -12,4 +12,7 @@
 
 <button type="button" (click)="showAlert()"></button>
 <input type="date" name="date" id="date" placeholder="Enter a date">
-<h2>shankar - adding last commits in github</h2>
+<h2>shankar - adding commits in github using tortoiseGit</h2>
+,,,,,,,,,,,,,>>>><<<<<<<<<<
+    <<<<<<<<<<<<<<<
+        <<<<<<<<<<
