--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -23,10 +23,7 @@ Enter Name:
 
 <div class="container">
 
-<<<<<<< HEAD
-=======
 
->>>>>>> 531aa7ca9101a682db5a3b10ef08e126cf6713e4
 <form #loginForm="ngForm" (ngSubmit)="getLoginFormData(loginForm.value)">
     <input type="text" placeholder="Enter"  name="name" ngModel required><br><br>
 <input type="password" placeholder="password" name="password" ngModel required><br><br>
@@ -53,10 +50,7 @@ git
 
 <div class="container"><div>hsuhfu</div>
 
-<<<<<<< HEAD
-=======
- main
->>>>>>> 531aa7ca9101a682db5a3b10ef08e126cf6713e4
+
     <form #loginForm="ngForm" (ngSubmit)="getLoginFormData(loginForm.value)">
         <input type="text" placeholder="Enter" name="name" ngModel required><br><br>
         <input type="password" placeholder="password" name="password" ngModel required><br><br>
@@ -128,6 +122,7 @@ git
                         <th>Gender</th>
                     </tr>
                 </thead>
+                <p>sunil singh rathore</p>
                 <tbody>
                     <tr *ngFor="let list of anyArray">
                         <td>{{list.firstname}}</td>
