--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -100,7 +100,7 @@ git
 
                     <button>Submit </button>
                     <button (click)="clickon()">Submit like and </button>
-                    <p>onsectetur adipisicing elit. udantium facere? A, repellat minima. Dolorem laboriosam expedita saepe est numquam error mollitia iusto ex unde rem necessitatibus, dolorum doloribus illum enim adipisci animi ipsam laborum eveniet sint?</p>
+                    <p>onsectetupellat minima. Dolorem laboriosam expedita saepe est numquam error mollitia iusto ex unde rem necessitatibus, dolorum doloribus illum enim adipisci animi ipsam laborum eveniet sint?</p>
                 </form>
 
                 <p>{{named}}</p>
