--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -12,17 +12,17 @@ Enter Name:
 
 {{a|currency}}<br>-->
 
-{{p|percent}}
+<!-- {{p|percent}} -->
 <p>hello , i have added this
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
 <p>hello , i have added this
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
-git  
+
 
     
 
 {{decimal|date:"dd/mm/yy"}} 
-<label for="text">Enter Name</label> <br>
+
 <label for="text">Enter Name</label> <br>
 <input type="text" placeholder="name"> <br>
 <label for="text">Enter E-mail</label> <br>
@@ -38,12 +38,12 @@ git
     <form #loginForm="ngForm" (ngSubmit)="getLoginFormData(loginForm.value)">
         <input type="text" placeholder="Enter" name="name" ngModel required><br><br>
         <input type="password" placeholder="password" name="password" ngModel required><br><br>
-         HEAD <button type="submit">Submit</button>
+          <button type="submit">Submit</button>
 
-            =======
+            
             <button>Submit </button>
             <button (click)="clickon()">Submit like and </button>
-            >>>>>>> a9deabf281e50af4a177754eb35bd86bb1156f86
+        
 
     </form>
     <p>{{named}}</p>
