--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -109,7 +109,7 @@ git
                 </form>
 
                 <p>{{named}}</p>
-
+sunil singh rathore
         </div>
 
         <div *ngFor="let list of anyArray ; let i = index">
