--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,4 @@
 <app-class2></app-class2>
 <router-outlet></router-outlet>
 <button type="button" class="btn btn-primary">login</button>
-khgghheh
+<p>hello</p>
