--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -100,7 +100,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
 </div>
 =======
 
-        <p>hello , i have 
+        <p>hello , i have ehfuehu
 
             L quidem, quas, tenetur vat!</p>
 
