--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -108,8 +108,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
             accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
 
         <p>hello , i have added this
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni officiis. Repellendus rerum
-            accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
+            uidem, quas, tenetur vat!</p>
         <p>hello , i have added this
             Lorem ipsum dolor  atque perspiciatis quidem, quas, tenetur vat!</p>
 
