--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -21,7 +21,7 @@ Enter Name:
 
 {{decimal|date:"dd/mm/yy"}} -->
 
-<p>sgfsfshs</p>
+<p>sgfsfshsczx, cxcnxlkcnzlcnzxlkcnzxklcnxzlcnxzlkcnzl</p>
 
 
 <div class="container">
