--- a/src/app/class1/class1.component.html
+++ b/src/app/class1/class1.component.html
@@ -100,7 +100,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
 </div>
 =======
 
-        <p>hello , i have ehfuehu
+        <p>hello , i have ehfuehu    sunil 
 
             L quidem, quas, tenetur vat!</p>
 
@@ -108,7 +108,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, magni offic
             accusantium doloremque beatae atque perspiciatis quidem, quas, tenetur vat!</p>
 
         <p>hello , i have added this
-            uidem, quas, tenetur vat!</p>
+            hfweufuuidem, quas, tenetur vat!</p>
         <p>hello , i have added this
             Lorem ipsum dolor  atque perspiciatis quidem, quas, tenetur vat!</p>
 
